--- a/Form/Formtry.csproj
+++ b/Form/Formtry.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="Add-drop.aspx" />
     <Content Include="Add-drop2.aspx" />
+    <Content Include="adddrop3.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -137,10 +138,16 @@
     </Compile>
     <Compile Include="Add-drop2.aspx.cs">
       <DependentUpon>Add-drop2.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Add-drop2.aspx.designer.cs">
       <DependentUpon>Add-drop2.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="adddrop3.aspx.cs">
+      <DependentUpon>adddrop3.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="adddrop3.aspx.designer.cs">
+      <DependentUpon>adddrop3.aspx</DependentUpon>
     </Compile>
     <Compile Include="Formtry.aspx.cs">
       <DependentUpon>Formtry.aspx</DependentUpon>
